<resources>
    <string name="app_name">ClockIn</string>

    // login
    <string name="title">GClockIn</string>
    <string name="company_username">帳號</string>
    <string name="company_password">密碼</string>
    <string name="login">登入</string>
    <string name="identify">辨識</string>

    // Company registration form
    <string name="registration_form">免費註冊公司帳號</string>
    <string name="set_company_username">帳號</string>
    <string name="set_company_password">密碼</string>
    <string name="confirm_password">在輸入一次密碼</string>
    <string name="set_company_name">公司名稱</string>
    <string name="set_company_email">E-mail</string>
    <string name="registration_success">註冊成功</string>
    <string name="register">註冊</string>

    // User registration form
    <string name="user_registration">員工註冊</string>
    <string name="set_user_email">欲設定員工電子郵件</string>
    <string name="set_username">員工姓名</string>
    <string name="set_phone_number">員工聯絡電話</string>
    <string name="set_birthday">生日</string>
    <string name="set_sex">性別</string>
    <string-array name="性別">
        <item>男性</item>
        <item>奴性</item>
        <item>別的</item>
    </string-array>

    // mail
    <string name="set_manager">是否為管理職</string>
    <string name="set_wage">薪水</string>
    <string name="set_photo">添加照片</string>

    // clockin
    <string name="clockin">員工打卡</string>
    <string name="clocked_in_for">"你工作的總時間是：%1$s"</string>
    <string name="options">管理</string>
    <string name="clocked_out">"您已成功下班"</string>
    <string name="clocked_in">"您已成功打卡"</string>
    <string name="clockin_success">您的打卡已被錄製</string>
    <string name="already_clocked_in">"你目前還沒打卡"</string>
    <string name="not_currently_clocked_in">"你已經上班了"</string>
    <string name="clockin_confirm">請確認打卡</string>
    <string name="yes">是的</string>
    <string name="cancel">取消</string>

    // punches
    <string name="in">上班時間：</string>
    <string name="out">下班時間：</string>
    <string name="hours">%1$s小時</string>
    <string name="time">總時間</string>
    <string name="date_window">時間段: %1$s - %2$s</string>
    <string name="in_string">上班時間：%1$s</string>
    <string name="out_string">下班時間：%1$s</string>

    // user profile
    <string name="account_info">帳戶信息</string>
    <string name="name">名稱: %1$s</string>
    <string name="email">電子郵件: %1$s</string>
    <string name="user_wage">薪水: %1$s</string>
    <string name="phone_number">電話號碼: %1$s</string>
    <string name="open_punches">查看打卡記錄</string>

    // welcome
    <string name="morning">早安, %1$s</string>
    <string name="midnight">午夜您好, %1$s</string>
    <string name="evening">晚安您好, %1$s</string>
    <string name="afternoon">午安您好, %1$s</string>
    <string name="timer_format">00:00:00</string>

    // error messages
    <string name="company_user_empty">請輸入公司帳號</string>
    <string name="password_empty">密碼不能為空</string>
    <string name="company_name_empty">請輸入公司名稱</string>
    <string name="company_email_empty">請輸入公司電子郵件</string>
    <string name="password_no_match">密碼不匹配</string>
    <string name="duplicate_account">檢測到重複帳戶</string>
    <string name="invalid_account">無效的公司名稱</string>
    <string name="company_login_failed">公司名稱或密碼錯誤</string>
    <string name="error_connecting">"連接時發生錯誤"</string>
    <string name="error_tos">請同意服務條款</string>

    // dialog
    <string name="confirm_photo">確認照片</string>
    <string name="retry">重試</string>
    <string name="please_blink">請對準臉框進行拍攝</string>
    <string name="no_faces_detected">未檢測到人臉</string>
    <string name="identification_unsuccessful">辨識失敗。再試一次</string>
    <string name="editing_success">編輯成功</string>
    <string name="your_photo">你的照片</string>
    <string name="please_grant_permissions">請授予使用此應用程序的權限</string>
    <string name="status_on">狀態：上班</string>
    <string name="status_off">狀態：下班</string>
    <string name="add_account">新增帳戶</string>
    <string name="settings">設置</string>
    <string name="logout">登出</string>
    <string name="save">確認保存</string>
    <string name="manager">經理: %1$s</string>
    <string name="active">積極工作者: %1$s</string>

    // misc
    <string name="server_client_id">906711666561-evlhsmvgm4qcnu43gm09t417k2fuvu1f.apps.googleusercontent.com</string>
    <string name="terms_of_service">點擊註冊代表同意 《服務條款》</string>
    <string name="clockin_time">上班時間：</string>
    <string name="clockout_time">下班時間：</string>

    // screen names
    <string name="punch_title">打卡紀錄</string>
    <string name="profile_title">個人帳號管理</string>
    <string name="all_punches_title">匯出報表</string>
    <string name="add_user_title">新增使用者</string>

</resources>